--- a/sw/airborne/test/ahrs/Makefile
+++ b/sw/airborne/test/ahrs/Makefile
@@ -11,12 +11,12 @@ CFLAGS +=
 # imu wants airframe to fetch its neutrals
 # ahrs wants airframe to fetch IMU_BODY_TO_IMU_ANGLES
 #CFLAGS += -I../../../../var/BOOZ2_A7
-CFLAGS += -I../../../../var/TA
+CFLAGS += -I../../../../var/LUKE_QUAD_PWM_EXP
 
 
 #CFLAGS += -DIMU_BODY_TO_IMU_PHI=0 -DIMU_BODY_TO_IMU_THETA=0 -DIMU_BODY_TO_IMU_PSI=0
 # toulouse 0.51562740288882, -0.05707735220832, 0.85490967783446
-CFLAGS += -DAHRS_H_X=0.51562740288882 -DAHRS_H_Y=-0.05707735220832 -DAHRS_H_Z=0.85490967783446
+#CFLAGS += -DAHRS_H_X=0.51562740288882 -DAHRS_H_Y=-0.05707735220832 -DAHRS_H_Z=0.85490967783446
 
 #CFLAGS += -DDISABLE_ALIGNEMENT
 #CFLAGS += -DDISABLE_PROPAGATE
@@ -45,8 +45,8 @@ run_ahrs_ice_on_flight_log: ../../subsystems/ahrs/ahrs_int_cmpl_euler.c $(SRCS)
 	$(CC) -DAHRS_TYPE=AHRS_TYPE_ICE $(CFLAGS) -o $@ $^ $(LDFLAGS)
 
 ifndef AHRS_TYPE
-#AHRS_TYPE = AHRS_TYPE_ICE
-AHRS_TYPE = AHRS_TYPE_ICQ
+AHRS_TYPE = AHRS_TYPE_ICE
+#AHRS_TYPE = AHRS_TYPE_ICQ
 #AHRS_TYPE = AHRS_TYPE_FLQ
 #AHRS_TYPE = AHRS_TYPE_FCR   # doesn't work - inverted accel
 #AHRS_TYPE = AHRS_TYPE_FCR2
