--- a/conf/Makefile.sim
+++ b/conf/Makefile.sim
@@ -56,6 +56,7 @@ CFLAGS += $(INCLUDES)
 CFLAGS += $($(TARGET).CFLAGS)
 CFLAGS += $(LOCAL_CFLAGS)
 CFLAGS += -O2
+CFLAGS += -g
 
 ifneq ($(SIM_TYPE),JSBSIM)
 CFLAGS += -std=gnu99
